reorganizing, scraper added thanks Wally.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
 .idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+node_modules
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
 # Compiled source #
 ###################
