--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ringzero",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +14,12 @@
   "bugs": {
     "url": "https://github.com/LiminalCrab/ringzero/issues"
   },
-  "homepage": "https://github.com/LiminalCrab/ringzero#readme"
+  "homepage": "https://github.com/LiminalCrab/ringzero#readme",
+  "description": "",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
