--- a/package.json
+++ b/package.json
@@ -15,11 +15,5 @@
     "url": "https://github.com/LiminalCrab/ringzero/issues"
   },
   "homepage": "https://github.com/LiminalCrab/ringzero#readme",
-  "description": "",
-  "dependencies": {
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
-  }
+  "description": ""
 }
